# Flashscore--study-app

./: .env. local  .env.example  .npmrc  .replit  DEPLOYMENT.md  DEPLOYMENT_FEATURES.md  DEPLOYMENT_FIX.md  SECURITY.md  TESTING.md  debug-system.js  docker-compose.yml  health-check.js  package.json  playwright.config.ts  pyproject.toml  render.yaml  replit.md  tsconfig.json  vercel.json
.github/workflows/: ci.yml
apps/backend/: .env  .env.example  .env.production  package.json  requirements.txt  tsconfig.json  vitest.config.ts
apps/backend/ml/: Dockerfile  api.py  circuit_breaker.py  main.py  monitoring.py  predictionModel.py  render.yaml  requirements.txt  train_model.py
apps/backend/ml/app/: magajico_predictor.py
apps/backend/src/: index.ts  main.test.ts  main.ts
apps/backend/src/config/: db.test.ts  db.ts
apps/backend/src/controllers/: configController.ts  matchController.ts  (+2 more)
apps/frontend/: .env.development  .env.example  next.config.js  package.json  tsconfig.json  vercel.json  vitest.config.ts
apps/frontend/app/: page.tsx
apps/frontend/public/: manifest.json  service-worker.js  sw.js
apps/frontend/src/: i18n.ts  middleware.ts
docs/: BUG_FIX_ROADMAP.md  COPPA_POLICY.md  FEATURE_BRAINSTORM.md  I18N_GUIDE.md  NEW_FEATURES_BRAINSTORM.md  PRIVACY_COPPA.md  ROADMAP.md  SECURITY_PRIORITIES.md  TERMS_COPPA.md
frontend/components/MagajiCoFoundation/: PhaseCard.tsx  index.tsx  phasesData.js  phasesData.ts
public/: service-worker.js
recyclebin/redundant-predictions/: predictionService.ts  predictions.ts
tests/e2e/: home.spec.ts  kids-mode.spec.ts
(+254 files in other folders)
